Change shadow color

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             gridRow: 2,
             justifySelf: "center",
             alignSelf: "center",
-            boxShadow: "1vw 1vw #006D77"
+            boxShadow: "1vw 1vw #B8DEDC"
         }
         
         const imageLinks = {
